<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ocean"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/space_16">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/TextInputLayoutTheme"
            android:hint="@string/text_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                style="@style/EditTextTheme"
                android:inputType="textPersonName|textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/TextInputLayoutTheme"
            android:layout_marginTop="@dimen/space_16"
            android:hint="@string/text_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                style="@style/EditTextTheme"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/TextInputLayoutTheme"
            android:layout_marginTop="@dimen/space_16"
            android:hint="@string/text_password"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                style="@style/EditTextTheme"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/LoginRegisterButtonTheme"
            android:text="@string/text_register"/>

    </LinearLayout>

</ScrollView>